--- a/static/style.css
+++ b/static/style.css
@@ -5,10 +5,14 @@ body {
 }
 
 #content {
-	background-color:rgba(255,255,255,0.5);
 	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
+	padding-top: 40px;
+}
+
+#main {
+	background-color:rgba(255,255,255,0.5);
 	text-align: center;
 	padding-top: 25px;
 	-moz-border-radius: 10px;
@@ -19,6 +23,6 @@ h1 {
 	text-align: center;
 }
 
-img {
+#content img {
 	padding: 50px;
 }
