--- a/static/style.css
+++ b/static/style.css
@@ -8,15 +8,25 @@ body {
 	width: 700px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 40px;
+	padding-top: 60px;
 }
 
 #main {
-	background-color:rgba(255,255,255,0.5);
+	background-color:rgba(255,255,255,0.7);
 	text-align: center;
 	padding-top: 25px;
+	padding-bottom: 25px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
+}
+
+#footer {
+	background-color:rgba(255,255,255,0.7);
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	font-size: 14px;
+	padding: 20px;
+	margin-top: 30px;
 }
 
 h1 {
