--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 	<div id="footer">
 		<h2>About this Site</h2>
-		<p>Who's Who is a site to learn the names and faces of current students at the <a href="http://ischool.berkeley.edu">UC Berkeley School of Information</a>. Hacked together in an afternoon by <a href="http://davelester.org">Dave Lester</a>. <a href="http://www.flickr.com/photos/n8agrin/2073530456/">South Hall photo</a> credit Nate Agrin.</p>
+		<p>Who's Who is a website for learning the names and faces of current students at the <a href="http://ischool.berkeley.edu">UC Berkeley School of Information</a>. It was hacked together in an afternoon by <a href="http://davelester.org">Dave Lester</a>. The <a href="http://www.flickr.com/photos/n8agrin/2073530456/">photo of South Hall</a> used as the website's background image was taken by Nate Agrin.</p>
 	</div>
 </div>
 
